fixed another layout issue

--- a/CSS/Stylesheet.css
+++ b/CSS/Stylesheet.css
@@ -48,7 +48,7 @@ p{
 #tool_bar_extra{
 	display: inline-block;
 	position: relative;
-	left: 200px;
+	left: 165px;
 }
  
 
